--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 gmusicapi = "^12.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = {version = "^0.12.0", optional = true}
+tqdm = "^4.42"
 
 [tool.poetry.dev-dependencies]
 mypy = {version = "^0.761.0", allows-prereleases = true}
